# OVR

./: .gitignore  ecosystem.config.js  generate-icons.js  index.html  next.config.ts  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: build-static.js
src/: App.tsx  globals.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  feeds.rs  lib.rs  main.rs  scheduler.rs  storage.rs
src/app/: globals.css  layout.tsx
src/app/api/archive/: route.ts
src/app/api/digest/: route.ts
src/app/api/settings/: route.ts
src/app/api/settings/categories/: route.ts
src/app/api/settings/opml-import/: route.ts
src/app/api/settings/source-test/: route.ts
src/app/api/settings/sources/: route.ts
src/components/: AppShell.tsx  ArchiveDatePageContent.tsx  ArchiveDateView.tsx  ArchivePageContent.tsx  ArchiveView.tsx  BackToTop.tsx  CategoryLoader.tsx  CategoryView.tsx  DigestSection.tsx  ErrorBoundary.tsx  FeedCard.tsx  HomeLoader.tsx  HomeView.tsx  LastUpdated.tsx  Navbar.tsx  SearchBar.tsx  SearchPageContent.tsx  SearchView.tsx  SettingsPageContent.tsx  SettingsView.tsx  TweetCard.tsx
src/lib/: aggregator.ts  api.ts  feeds.ts  images.ts  scheduler.ts  storage.ts  tauri.ts  utils.ts
